--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/setting.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/setting.html.twig
@@ -61,7 +61,7 @@
                     {{form_widget(form.roleUserId)}}
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-tags"></i></span>
-                        {{response.values.userRoleHtml|raw}}
+                        {{response.values.userRoleSelectHtml|raw}}
                     </div>
                 </div>
 
