--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/menu_root.html.twig
@@ -105,7 +105,7 @@
                     <form id="form_language_text_mobile" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                         <div class="form-group">
                             <select id="form_language_mobile_codeText" class="form_language_codeText display_inline form-control" name="form_language[codeText]">
-                                {{response.values.languageOption|raw}}
+                                {{response.values.languageSelectOptionHtml|raw}}
                             </select>
                         </div>
                         <input id="form_language_mobile__token" type="hidden" name="form_language[_token]" value="{{csrf_token("intention")}}">
@@ -132,7 +132,7 @@
                         </p>
                         <p class="margin_clear"><b>{% trans %}authentication_3{% endtrans %}</b></p>
                         <p class="margin_clear">{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
-                        <div class="margin_top horizontal_center">
+                        <div class="horizontal_center">
                             <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
                             <a class="button_custom btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
                         </div>
